--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,7 @@
         </div>
         <nav class="navbar navbar-expand-md navbar-dark" id="nav1">
             <!-- Brand -->
-            <a class="navbar-brand" href="Index.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
     
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
