--- a/NuestrosProductos.html
+++ b/NuestrosProductos.html
@@ -10,7 +10,7 @@
     <title>Nuestros Productos|Las Lavandas🌸</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="sass/estilos.css">
 </head>
 
 <body>
