--- a/servicios.html
+++ b/servicios.html
@@ -13,7 +13,7 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
 
 
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="sass/estilos.css" />
 </head>
 
 <body>
