--- a/servicios.html
+++ b/servicios.html
@@ -25,7 +25,7 @@
         </div>
         <nav class="navbar navbar-expand-md navbar-dark" id="nav1">
             <!-- Brand -->
-            <a class="navbar-brand" href="Index.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -111,7 +111,7 @@
     <footer class="footer--style">
         <b>Mapa del sitio</b>
         <ol>
-            <li><a class="footer__a--style" href="Index.html">Inicio</a></li>
+            <li><a class="footer__a--style" href="index.html">Inicio</a></li>
             <li><a class="footer__a--style" href="nosotros.html">Nosotros</a></li>
             <li><a class="footer__a--style" href="servicios.html">Servicio</a></li>
             <ul>
