--- a/contacto.html
+++ b/contacto.html
@@ -18,9 +18,9 @@
     <header>
 
         <div class="header__div">  
-            <img src="img/logolavandainvertido2.png" alt="Logo Lavandas" width="70"> 
+            <img class="lavs" src="img/logolavandainvertido2.png" alt="Logo Lavandas" > 
             <h1 class="header__h1--style" id="header"> Las lavandas</h1>
-            <img src="img/logolavanda2.png" alt="Logo las Lavandas" width="90"> 
+            <img class="lavs" src="img/logolavanda2.png" alt="Logo las Lavandas" > 
         </div>
         <nav class="navbar navbar-expand-md navbar-dark" id="nav1">
             <!-- Brand -->
